--- a/rocketFlowSdk/src/main/res/layout/user_details_card.xml
+++ b/rocketFlowSdk/src/main/res/layout/user_details_card.xml
@@ -26,7 +26,7 @@
                 android:fontFamily="@font/campton_book"
                 android:text="Customer Details"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +62,9 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="1dp"
                 android:layout_marginEnd="4dp"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:textSize="@dimen/text_size_13"
                 android:fontFamily="@font/campton_book"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/textView11"
@@ -87,6 +90,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginEnd="4dp"
                 android:fontFamily="@font/campton_book"
+                android:textSize="@dimen/text_size_13"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/textView13"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +115,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginEnd="4dp"
                 android:ellipsize="marquee"
+                android:textSize="@dimen/text_size_13"
                 android:fontFamily="@font/campton_book"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
