--- a/rocketFlowSdk/src/main/res/drawable/circle.xml
+++ b/rocketFlowSdk/src/main/res/drawable/circle.xml
@@ -3,8 +3,8 @@
     android:shape="oval">
     <gradient
         android:angle="270"
-        android:endColor="@color/colorPrimary"
-        android:startColor="@color/colorPrimary" />
+        android:endColor="@color/colorPrimaryLib"
+        android:startColor="@color/colorPrimaryLib" />
     <size
         android:width="15dp"
         android:height="15dp"/>
