--- a/rocketFlowSdk/src/main/res/layout/activity_buddy_filter_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_buddy_filter_sdk.xml
@@ -148,7 +148,7 @@
                     android:layout_width="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentBottom="true"
-                    android:background="@color/colorPrimary"
+                    android:background="@color/colorPrimaryLib"
                     android:onClick="@{() -> viewModel.onProceedClick()}"
                     android:paddingTop="@dimen/dimen_10"
                     android:paddingBottom="@dimen/dimen_10"
