--- a/rocketFlowSdk/src/main/res/layout/activity_new_create_task_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_new_create_task_sdk.xml
@@ -972,7 +972,7 @@
                                         android:scaleX="0.6"
                                         android:scaleY="0.6"
                                         app:colorBorder="@color/toggle_bg"
-                                        app:colorDisabled="@color/colorAccent"
+                                        app:colorDisabled="@color/colorAccentLib"
                                         app:colorOff="@color/toggle_bg"
                                         app:colorOn="@color/white"
                                         app:on="false"
@@ -1200,7 +1200,7 @@
                                         android:scaleX="0.6"
                                         android:scaleY="0.6"
                                         app:colorBorder="@color/toggle_bg"
-                                        app:colorDisabled="@color/colorAccent"
+                                        app:colorDisabled="@color/colorAccentLib"
                                         app:colorOff="@color/toggle_bg"
                                         app:colorOn="@color/white"
                                         app:on="false"
