--- a/rocketFlowSdk/src/main/res/layout/layout_row_show_contact_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/layout_row_show_contact_sdk.xml
@@ -34,7 +34,7 @@
                 android:layout_centerInParent="true"
                 app:srcCompat="@drawable/circle_name"
                 android:layout_width="match_parent"
-                android:tint="@color/colorPrimary"
+                android:tint="@color/colorPrimaryLib"
                 android:layout_height="match_parent" />
 
             <TextView
