--- a/rocketFlowSdk/src/main/res/layout/view_add_photo.xml
+++ b/rocketFlowSdk/src/main/res/layout/view_add_photo.xml
@@ -30,7 +30,7 @@
             android:text="@string/add_more"
             android:id="@+id/addMore"
             android:visibility="gone"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryLib"
             android:textStyle="bold" />
     </RelativeLayout>
 
