--- a/rocketFlowSdk/src/main/res/values/colors.xml
+++ b/rocketFlowSdk/src/main/res/values/colors.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorPrimary">#1e456e</color>
-    <color name="colorPrimaryDark">#1e456e</color>
+    <color name="colorPrimaryLib">#1e456e</color>
+    <color name="colorPrimaryDarkLib">#1e456e</color>
     <color name="colorPrimaryDark_10">#1e456e</color>
-    <color name="colorAccent">#1e456e</color>
+    <color name="colorAccentLib">#1e456e</color>
     <color name="semitransparent">#33000000</color>
     <color name="light_blue">#DFDDF9</color>
     <color name="background">#dddddd</color>
-
     <color name="blue">#1e456e</color>
     <color name="blue_1">#1e456e</color>
     <color name="brown">#9E682A</color>
