--- a/rocketFlowSdk/src/main/res/drawable/bg_rounded_date_selector.xml
+++ b/rocketFlowSdk/src/main/res/drawable/bg_rounded_date_selector.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/dimen_20" />
-    <stroke android:color="@color/colorPrimary" android:width="@dimen/dimen_0_8"/>
+    <stroke android:color="@color/colorPrimaryLib" android:width="@dimen/dimen_0_8"/>
     <solid android:color="@color/white" />
 
 </shape>
