--- a/rocketFlowSdk/src/main/res/drawable/blue_circle_stroke.xml
+++ b/rocketFlowSdk/src/main/res/drawable/blue_circle_stroke.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <stroke android:color="@color/colorPrimary" android:width="@dimen/dimen_1"/>
+    <stroke android:color="@color/colorPrimaryLib" android:width="@dimen/dimen_1"/>
     <size android:height="@dimen/dimen_30"
         android:width="@dimen/dimen_30"/>
 
