--- a/rocketFlowSdk/src/main/res/drawable/ic_call_yellow.xml
+++ b/rocketFlowSdk/src/main/res/drawable/ic_call_yellow.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="34"
     android:viewportHeight="34">
     <path
-        android:fillColor="@color/colorPrimary"
+        android:fillColor="@color/colorPrimaryLib"
         android:pathData="M17,17m-17,0a17,17 0,1 1,34 0a17,17 0,1 1,-34 0" />
     <path
         android:fillColor="#fff"
