--- a/rocketFlowSdk/src/main/res/drawable/ic_switch_on.xml
+++ b/rocketFlowSdk/src/main/res/drawable/ic_switch_on.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="512"
     android:viewportHeight="512">
     <path
-        android:fillColor="@color/colorPrimary"
+        android:fillColor="@color/colorPrimaryLib"
         android:pathData="M376.5,120.5h-241C60.785,120.5 0,181.285 0,256s60.785,135.5 135.5,135.5h241c74.715,0 135.5,-60.785 135.5,-135.5S451.215,120.5 376.5,120.5zM376.5,361.5C318.327,361.5 271,314.174 271,256c0,-58.172 47.327,-105.5 105.5,-105.5c58.173,0 105.5,47.328 105.5,105.5C482,314.174 434.673,361.5 376.5,361.5z"/>
 </vector>
