--- a/rocketFlowSdk/src/main/res/drawable/layout_bg_payments_status.xml
+++ b/rocketFlowSdk/src/main/res/drawable/layout_bg_payments_status.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <solid android:color="@color/white" />
     <corners android:radius="@dimen/dimen_30" />
-    <stroke android:color="@color/colorPrimary" android:width="0.8dp"/>
+    <stroke android:color="@color/colorPrimaryLib" android:width="0.8dp"/>
 
 </shape>
