--- a/rocketFlowSdk/src/main/res/drawable/view_line_indigator.xml
+++ b/rocketFlowSdk/src/main/res/drawable/view_line_indigator.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <size android:width="50dp" android:height="4dp"/>
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorPrimaryLib" />
 
 
 </shape>
