--- a/rocketFlowSdk/src/main/res/layout/activity_add_buddy_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_add_buddy_sdk.xml
@@ -56,7 +56,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight=".25"
-                        android:background="@color/colorPrimary" />
+                        android:background="@color/colorPrimaryLib" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
