--- a/rocketFlowSdk/src/main/res/layout/activity_select_order_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_select_order_sdk.xml
@@ -141,7 +141,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:text="@string/reset"
-                        android:textColor="@color/colorPrimary" />
+                        android:textColor="@color/colorPrimaryLib" />
                 </RelativeLayout>
 
 
@@ -186,7 +186,7 @@
                         android:paddingHorizontal="@dimen/dimen_10"
                         android:paddingVertical="@dimen/dimen_4"
                         android:text="Home"
-                        android:textColor="@color/colorPrimary" />
+                        android:textColor="@color/colorPrimaryLib" />
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -194,7 +194,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="@dimen/dimen_5"
                         app:srcCompat="@drawable/ic_down_triangle"
-                        app:tint="@color/colorPrimary" />
+                        app:tint="@color/colorPrimaryLib" />
                 </LinearLayout>
             </RelativeLayout>
 
