--- a/rocketFlowSdk/src/main/res/layout/item_dynamic_form_toggle_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/item_dynamic_form_toggle_sdk.xml
@@ -54,7 +54,7 @@
                 app:colorBorder="@color/toggle_bg"
                 android:scaleX="0.6"
                 android:scaleY="0.6"
-                app:colorDisabled="@color/colorAccent"
+                app:colorDisabled="@color/colorAccentLib"
                 app:colorOff="@color/toggle_bg"
                 app:colorOn="@color/white"
                 app:on="false"
