--- a/rocketFlowSdk/src/main/res/layout/item_row_product_category_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/item_row_product_category_sdk.xml
@@ -77,7 +77,7 @@
                     android:layout_alignParentBottom="true"
                     android:button="@drawable/bg_toggle"
                     android:text=""
-                    app:thumbTint="@color/colorPrimary" />
+                    app:thumbTint="@color/colorPrimaryLib" />
 
 
             </RelativeLayout>
