--- a/rocketFlowSdk/src/main/res/layout/layout_item_untis_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/layout_item_untis_sdk.xml
@@ -26,7 +26,7 @@
             android:layout_toLeftOf="@+id/ivCancel"
             android:text="@string/choose_product_unit"
             android:textSize="@dimen/text_size_16"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/colorPrimaryLib" />
 
         <ImageView
             android:id="@+id/ivCancel"
