--- a/rocketFlowSdk/src/main/res/layout/layout_show_image_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/layout_show_image_sdk.xml
@@ -10,7 +10,7 @@
         android:id="@+id/ivImages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryLib"
         android:contentDescription="@null"
         app:srcCompat="@drawable/ic_picture" />
 
