--- a/rocketFlowSdk/src/main/res/layout/layout_show_product_map_with_continue_button_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/layout_show_product_map_with_continue_button_sdk.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="@dimen/dimen_20"
         android:fontFamily="@font/campton_semi_bold"
         android:text="@string/product_details"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="@color/colorPrimaryLib" />
 
     <ImageView
         android:id="@+id/productImage"
