--- a/rocketFlowSdk/src/main/res/layout/something_went_wrong_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/something_went_wrong_sdk.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@null"
-        android:tint="@color/colorPrimary"
+        android:tint="@color/colorPrimaryLib"
         app:srcCompat="@drawable/ic_frown_face" />
 
     <TextView
