--- a/rocketFlowSdk/src/main/res/values/themes.xml
+++ b/rocketFlowSdk/src/main/res/values/themes.xml
@@ -2,14 +2,14 @@
 
     <style name="AppThemeBlue" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowContentOverlay">@null</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorPrimaryLib</item>
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkLib</item>
         <item name="colorControlNormal">@color/white</item>
         <item name="colorAccent">@color/blue</item>
-        <item name="colorSecondary">@color/colorAccent</item>
+        <item name="colorSecondary">@color/colorAccentLib</item>
         <item name="colorOnSecondary">@color/white</item>
-        <item name="android:statusBarColor" tools:ignore="NewApi">@color/colorPrimary</item>
+        <item name="android:statusBarColor" tools:ignore="NewApi">@color/colorPrimaryLib</item>
         <item name="android:windowBackground">@color/windowBackgroundColor</item>
         <item name="android:textAppearance">@style/TextAppearance.Text.Regular</item>
         <item name="searchViewStyle">@style/MySearchViewStyle</item>
@@ -239,7 +239,7 @@
     <!--</style>-->
 
     <style name="AppThemeBlue.BlackAccent">
-        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorPrimaryLib</item>
     </style>
 
     <!--<style name="AppThemeBlueFullScreen" parent="AppThemeBlue">-->
@@ -474,8 +474,8 @@
         <item name="tabTextAppearance">@style/AppTab.TextAppearance</item>
         <item name="tabIndicatorHeight">@dimen/dimen_2</item>
         <item name="android:fontFamily">@font/campton_book</item>
-        <item name="tabIndicatorColor">@color/colorPrimary</item>
-        <item name="tabSelectedTextColor">@color/colorPrimary</item>
+        <item name="tabIndicatorColor">@color/colorPrimaryLib</item>
+        <item name="tabSelectedTextColor">@color/colorPrimaryLib</item>
     </style>
 
     <style name="AppTab.TextAppearance" parent="TextAppearance.Design.Tab">
@@ -506,9 +506,9 @@
     <!-- Dialog  application theme. -->
     <style name="DialogTheme" parent="Base.Theme.AppCompat.Light.Dialog">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorAccent</item>
-        <item name="colorPrimaryDark">@color/colorAccent</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorAccentLib</item>
+        <item name="colorPrimaryDark">@color/colorAccentLib</item>
+        <item name="colorAccent">@color/colorAccentLib</item>
         <item name="android:fontFamily">@font/campton_book</item>
     </style>
 
@@ -555,9 +555,9 @@
 
     </style>
     <style name="NewDialog" parent="Base.Theme.AppCompat.Light.Dialog">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorPrimaryLib</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkLib</item>
+        <item name="colorAccent">@color/colorAccentLib</item>
         <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsFloating">true</item>
@@ -575,9 +575,9 @@
     </style>
     <style name="MaterialTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowContentOverlay">@null</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorPrimaryLib</item>
         <item name="colorPrimaryDark">@color/white</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorAccentLib</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="android:textAppearance">@style/TextAppearance.Text.Regular</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back_white_24dp</item>
