--- a/rocketFlowSdk/src/main/res/layout/dialog_rejecting_leave_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/dialog_rejecting_leave_sdk.xml
@@ -21,8 +21,7 @@
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="?android:attr/actionBarSize">-->
 
-<!--            <androidx.appcompat.widget.Toolbar
-            android:background="?attr/colorAccent"-->
+<!--            <androidx.appcompat.widget.Toolbar-->
 <!--                android:id="@+id/toolbar"-->
 <!--                style="@style/Toolbar"-->
 <!--                app:contentInsetLeft="0dp"-->
