--- a/rocketFlowSdk/src/main/res/layout/activity_fleet_listing_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_fleet_listing_sdk.xml
@@ -25,7 +25,7 @@
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
-                style="@style/ToolbarBlack"
+                style="@style/Toolbar"
                 app:contentInsetStartWithNavigation="0dp"
                 app:titleTextColor="@color/white"
                 tools:title="@string/add_fleet">
