--- a/rocketFlowSdk/src/main/res/layout/activity_calendar_task_listing.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_calendar_task_listing.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="Task Listing"
-            style="@style/ToolbarBlack"
+            style="@style/Toolbar"
             android:minHeight="?attr/actionBarSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
